Slight text alignment issues for the home page

--- a/css/avtfonts-style.css
+++ b/css/avtfonts-style.css
@@ -148,7 +148,8 @@ th {
     color: #B5B6B9;
     padding-bottom: 0px;
     padding-top: 20px;
-    font-size: 32px
+    font-size: 32px;
+    text-align: center;
 }
    h1.page-header{
     font-size: 1.1em;
@@ -166,7 +167,8 @@ th {
     color: #B5B6B9;
     padding-bottom: 0px;
     padding-top: 20px;
-    font-size: 31px
+    font-size: 31px;
+    text-align: center;
 }
    h1.page-header{
     display: block;
@@ -190,6 +192,7 @@ th {
     padding-top: 20px;
     font-size: 30px;
     margin: 40px 0 20px;
+    text-align: center;
   }
 
    h1.page-header{
